--- a/static/css/dashboard/purchase_list.css
+++ b/static/css/dashboard/purchase_list.css
@@ -26,7 +26,7 @@
 }
 
 .dashboard-purchase-list .item-list {
-    margin-top: 35px;
+    margin-top: 10px;
 }
 
 .dashboard-purchase-list .item-list .item {
@@ -148,4 +148,96 @@
     margin-top: 100px;
     padding-bottom: 100px;
     border-bottom: 1px solid #DEDEDE;
+}
+
+.purchase-table-wrapper{
+    margin-top:3%;
+    font-size:15px;
+    font-weight: bold;
+    width:99%;
+    margin-top:3%;
+    height:35px;
+    background-color: rgba(0, 0, 0, .2);
+    color: rgba(0, 0, 0, .5);
+    border: 1px solid rgba(0, 0, 0, .3);
+}
+
+.purchase-table-ul{
+    list-style: none;
+    position: relative;
+    top:30%;
+}
+
+.purchase-table-ul li{
+    float:left;
+    text-align:center;
+}
+
+.purchase-table-ul li:nth-child(1){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(2){
+    width:25%;
+}
+
+.purchase-table-ul li:nth-child(3){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(4){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(5){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(6){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(7){
+    width:9%;
+}
+
+/* purchase_table_content */
+.table_product.empty{
+    height:100%;
+    border-left: 1px solid black;
+}
+
+.table_product.empty div{
+    height:100%;
+}
+
+.table_product.empty button{
+    background:none;
+    width:100%;
+    height:100%;
+}
+
+.item-list .purchase-table-ul{
+    width:99%;
+    height:35px;
+    border:1px solid grey;
+    margin-bottom:10px;
+}
+
+.item-list .purchase-table-ul li{
+    position: relative;
+    top:10px;
+}
+
+.item-list .purchase-table-ul li:nth-child(7){
+    position: relative;
+    top:0px;
+}
+
+/* table_product_detal */
+.table_product_detail{
+    width:99%;
+    height:350px;
+    border: 1px solid black;
+    margin-bottom:10px;
 }
