--- a/static/css/dashboard/seller/order.css
+++ b/static/css/dashboard/seller/order.css
@@ -219,3 +219,727 @@
     background: #b1c6fc;
     font-size: 12px;
 }
+
+
+.dashboard-purchase-list .item-list {
+    margin-top: 10px;
+}
+
+.dashboard-purchase-list .item-list .item {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 15px;
+    border-bottom: 1px solid #F2F2F2;
+    position: relative;
+}
+
+.dashboard-purchase-list .item-list .item .image {
+    width: 70px;
+    height: 70px;
+    display: inline-block;
+}
+
+.dashboard-purchase-list .item-list .item .image img {
+    width: 100%;
+    height: 100%;
+}
+
+.dashboard-purchase-list .item-list .item .title {
+    display: inline-block;
+    margin-left: 20px;
+    vertical-align: top;
+    margin-top: 10px;
+    width: 300px;
+}
+
+.dashboard-purchase-list .item-list .item .title h3 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    color: rgba(0, 0, 0, .7);
+}
+
+.dashboard-purchase-list .item-list .item .title .meta p {
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 300;
+    color: rgba(0, 0, 0, .6);
+}
+
+.dashboard-purchase-list .item-list .item .seller {
+    display: inline-block;
+    position: absolute;
+    right: 60px;
+    margin-top: 10px;
+    vertical-align: top;
+    text-align: right;
+    font-size: 14px;
+    color: rgba(0, 0, 0, .5);
+}
+
+.dashboard-purchase-list .item-list .item .seller button {
+    padding: 3px 10px 3px 10px;
+    margin-top: 5px;
+    font-size: 12px;
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, .5);
+}
+
+.dashboard-purchase-list .item-list .item .more {
+    position: absolute;
+    right: 0;
+    top: 40px;
+}
+
+.dashboard-purchase-list .item-list .item .more i {
+    font-size: 20px;
+    color: white;
+    border-radius: 2px;
+    background: #648efc;
+    height: 20px;
+    width: 20px;
+    line-height: 23px;
+    text-align: center;
+    padding-bottom: 3px;
+    padding-right: 2px;
+    padding-left: 2px;
+    cursor: pointer;
+}
+
+.dashboard-purchase-list .item-list .item .item-info {
+    display: none;
+}
+
+.dashboard-purchase-list .item-list .item .purchase-info {
+    background: #FAFAFA;
+    padding-top: 20px;
+    padding-left: 28px;
+    padding-bottom: 50px;
+    border-top: 3px solid #DEDEDE;
+    margin-top: 20px;
+}
+
+.dashboard-purchase-list .item-list .item .purchase-info p {
+    font-size: 14px;
+    color: rgba(0, 0, 0, .5);
+    line-height: 1.3;
+}
+
+.dashboard-purchase-list .item-list .item .message-area {
+    width: 100%;
+    height: 200px;
+}
+
+.dashboard-purchase-list .item-list .item textarea {
+    width: 100%;
+    resize: none;
+}
+
+.no-list {
+    text-align: center;
+    color: #648efc;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 100px;
+    padding-bottom: 100px;
+    border-bottom: 1px solid #DEDEDE;
+}
+
+.dashboard-purchase-list .purchase-list-nav {
+    margin-top: 25px;
+    margin-left: 25px;
+}
+
+.dashboard-purchase-list .purchase-list-nav ul li {
+    display: inline-block;
+    font-size: 12px;
+    color: rgba(0, 0, 0, .6);
+    font-weight: 600;
+    text-align: center;
+    cursor: pointer;
+    margin-right: 30px;
+}
+
+.dashboard-purchase-list .purchase-list-nav ul li:first-child {
+    margin-left: 10px;
+}
+
+.dashboard-purchase-list .purchase-list-nav ul li:last-child {
+    margin-right: 0;
+}
+
+.dashboard-purchase-list .purchase-list-nav .active {
+    color: #648efc;
+}
+
+.dashboard-purchase-list .item-list {
+    margin-top: 10px;
+}
+
+.dashboard-purchase-list .item-list .item {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 15px;
+    border-bottom: 1px solid #F2F2F2;
+    position: relative;
+}
+
+.dashboard-purchase-list .item-list .item .image {
+    width: 70px;
+    height: 70px;
+    display: inline-block;
+}
+
+.dashboard-purchase-list .item-list .item .image img {
+    width: 100%;
+    height: 100%;
+}
+
+.dashboard-purchase-list .item-list .item .title {
+    display: inline-block;
+    margin-left: 20px;
+    vertical-align: top;
+    margin-top: 10px;
+    width: 300px;
+}
+
+.dashboard-purchase-list .item-list .item .title h3 {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    color: rgba(0, 0, 0, .7);
+}
+
+.dashboard-purchase-list .item-list .item .title .meta p {
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 300;
+    color: rgba(0, 0, 0, .6);
+}
+
+.dashboard-purchase-list .item-list .item .seller {
+    display: inline-block;
+    position: absolute;
+    right: 60px;
+    margin-top: 10px;
+    vertical-align: top;
+    text-align: right;
+    font-size: 14px;
+    color: rgba(0, 0, 0, .5);
+}
+
+.dashboard-purchase-list .item-list .item .seller button {
+    padding: 3px 10px 3px 10px;
+    margin-top: 5px;
+    font-size: 12px;
+    background: transparent;
+    border: 1px solid rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, .5);
+}
+
+.dashboard-purchase-list .item-list .item .more {
+    position: absolute;
+    right: 0;
+    top: 40px;
+}
+
+.dashboard-purchase-list .item-list .item .more i {
+    font-size: 20px;
+    color: white;
+    border-radius: 2px;
+    background: #648efc;
+    height: 20px;
+    width: 20px;
+    line-height: 23px;
+    text-align: center;
+    padding-bottom: 3px;
+    padding-right: 2px;
+    padding-left: 2px;
+    cursor: pointer;
+}
+
+.dashboard-purchase-list .item-list .item .item-info {
+    display: none;
+}
+
+.dashboard-purchase-list .item-list .item .purchase-info {
+    background: #FAFAFA;
+    padding-top: 20px;
+    padding-left: 28px;
+    padding-bottom: 50px;
+    border-top: 3px solid #DEDEDE;
+    margin-top: 20px;
+}
+
+.dashboard-purchase-list .item-list .item .purchase-info p {
+    font-size: 14px;
+    color: rgba(0, 0, 0, .5);
+    line-height: 1.3;
+}
+
+.dashboard-purchase-list .item-list .item .message-area {
+    width: 100%;
+    height: 200px;
+}
+
+.dashboard-purchase-list .item-list .item textarea {
+    width: 100%;
+    resize: none;
+}
+
+
+
+
+.purchase-table-wrapper{
+    margin-top:3%;
+    font-size:15px;
+    font-weight: bold;
+    width:99%;
+    margin-top:3%;
+    height:35px;
+    background-color: rgba(0, 0, 0, .2);
+    color: rgba(0, 0, 0, .5);
+    border: 1px solid rgba(0, 0, 0, .3);
+}
+
+.purchase-table-ul{
+    list-style: none;
+    position: relative;
+    top:30%;
+}
+
+.purchase-table-ul li{
+    float:left;
+    text-align:center;
+}
+
+.purchase-table-ul li:nth-child(1){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(2){
+    width:25%;
+}
+
+.purchase-table-ul li:nth-child(3){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(4){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(5){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(6){
+    width:13%;
+}
+
+.purchase-table-ul li:nth-child(7){
+    width:9%;
+}
+
+/* purchase_table_content */
+.table_product.empty{
+    height:100%;
+    border-left: 1px solid black;
+}
+
+.table_product.empty div{
+    height:100%;
+}
+
+.table_product.empty button{
+    background:none;
+    width:100%;
+    height:100%;
+}
+
+.item-list .product_item_each_wrapper {
+    margin-top:2%;
+}
+
+.item-list .product_item_each_wrapper .purchase-table-ul{
+    width:77%;
+    height:35px;
+    border:1px solid grey;
+    margin-bottom:10px;
+    float:left;
+}
+
+.item-list .content.status_0 .product_item_each_wrapper .purchase-table-ul {
+    width:90%;
+    height:35px;
+    border:1px solid grey;
+    margin-bottom:10px;
+    float:left;
+}
+
+.item-list .product_item_each_wrapper .purchase-table-ul li{
+    position: relative;
+    width:15%;
+    top:10px;
+}
+
+.item-list .product_item_each_wrapper .purchase-table-ul li:nth-child(2) {
+    width:35%;
+}
+
+.item-list .product_item_each_wrapper .purchase-table-ul li:nth-child(4) {
+    width:18%;
+}
+
+.item-list .product_item_each_wrapper .purchase-table-ul li:nth-child(6) {
+    width:13%;
+}
+
+.item-list .product_item_each_wrapper .purchase-table-ul li:nth-child(7){
+    position: relative;
+    top:0px;
+}
+
+/* except for status 0 */
+
+.item-list .content.status_0 .product_item_each_wrapper .purchase-table-ul li{
+    position: relative;
+    width:15%;
+    top:10px;
+}
+
+.item-list .content.status_0 .product_item_each_wrapper .purchase-table-ul li:nth-child(2) {
+    width:27%;
+}
+.item-list .content.status_0 .product_item_each_wrapper .purchase-table-ul li:nth-child(6) {
+    width:13%;
+}
+
+.item-list .content.status_0 .product_item_each_wrapper .purchase-table-ul li:nth-child(7){
+    position: relative;
+    top:0px;
+}
+
+.item-list .table_product.btn{
+    width:35px;
+    height:32px;
+    float:right;
+    border: 1px solid grey;
+    margin-right:5px;
+    padding-top:3px;
+    padding-left:2px;
+}
+
+.item-list .table_product.btn button{
+    background:none;
+}
+
+.item-list .table_product.btn img{
+    width:82%;
+}
+
+.item-list .table_product_btn.change{
+    width: 70px;
+    float:right;
+    height:25px;
+    background-color:#648efc;
+    color:white;
+    border: 1px solid #648efc;
+    text-align: center;
+    font-size:13px;
+    padding-top:10px;
+    margin-right:5px;
+}
+
+.item-list .table_product_btn.change button{
+    background: none;
+}
+
+/* table_product_detail */
+.table_product_detail{
+    width:99%;
+    clear:left;
+    height:300px;
+    border: 1px solid #e8e8e8;
+    margin-bottom:10px;
+    display: none;
+}
+
+.table_product_detail .table_product_detail_left{
+    width:30%;
+    height:85%;
+    display: inline-block;
+}
+
+.table_product_detail .table_product_detail_right {
+    float:right;
+    display: inline-block;
+    width:69%;
+    height:85%;
+}
+
+.table_product_detail_right_title{
+    margin-top:20px;
+}
+
+.table_product_detail_right_title h2 {
+    font-weight:bold;
+}
+
+.table_product_detail_right_title p{
+    font-size:13px;
+}
+
+.table_product_detail_right_tbl{
+    margin-top:20px;
+}
+
+.table_product_detail_right_tbl table{
+    width:85%;
+    border:1px solid #e8e8e8;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.table_product_detail_right_tbl table th{
+    border-bottom:1px solid #e8e8e8;
+    font-size:16px;
+    height:30px;
+    vertical-align: middle;
+}
+
+.table_product_detail_right_tbl table tr{
+    font-size:12px;
+    height:25px;
+    vertical-align: middle;
+}
+
+.table_product_detail_right_tbl table td {
+    vertical-align: middle;
+
+}
+
+.table_product_detail_bottom{
+    clear:both;
+    width:100%;
+    height:15%;
+    display: inline-block;
+    background-color: #e8e8e8;
+
+}
+
+.table_product_detail_bottom ul{
+    list-style: none;
+    width:100%;
+    height:100%;
+    padding-top:8px;
+}
+
+.table_product_detail_bottom ul li{
+    float:left;
+    width:13%;
+    margin-left:5%;
+    font-size:13px;
+}
+
+.table_product_detail_bottom ul li:nth-child(1) {
+    width:20%;
+    margin-left:13%;
+}
+
+.table_product_detail_bottom ul li button{
+    background: none;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.table_product_detail_bottom ul li .detail_bottom_btn-talk{
+    background-color: #648efc;
+    width:100%;
+    height:30px;
+    color:white;
+    border:1px solid #648efc;
+}
+
+.table_product_detail_bottom ul li .detail_bottom_btn {
+    background-color: white;
+    width:100%;
+    height:30px;
+    color:grey;
+    border:1px solid grey;
+}
+
+/* gauge part */
+/* social gauge part */
+#circle{
+	position:relative;
+  height:45px;
+  width:90px;
+  border-radius: 90px 90px 0 0;
+  -moz-border-radius: 90px 90px 0 0;
+  -webkit-border-radius: 90px 90px 0 0;
+  background:green;
+}
+
+.circle-wrapper{
+	width:100%;
+	height:100%;
+    margin-left:11%;
+    margin-top:11%;
+	/*background-color:grey;*/
+}
+/* arrow for 1 */
+/*
+#arrow{
+	position:relative;
+	left:30;
+	top:90;
+	transform: rotate(15deg);
+}
+*/
+/* arrow for 2 */
+/*
+#arrow{
+	position:relative;
+	left:21%;
+	top:30;
+	transform: rotate(45deg);
+}
+*/
+/* arrow for 3 */
+/*
+#arrow{
+	position:relative;
+	left:45%;
+	top:0;
+	transform: rotate(90deg);
+}
+*/
+/* arrow for 4 */
+/*
+#arrow{
+	position:relative;
+	left:70%;
+	top:30;
+	transform: rotate(135deg);
+}
+*/
+/* arrow for 5 */
+/*
+.circle-arrow{
+	position:relative;
+	left:10%;
+	top:3.5em;
+	transform: rotate(160deg);
+}
+*/
+/* default arrow */
+
+.circle-arrow{
+	position:relative;
+    display: inherit;
+	left:0;
+	top:0;
+	/*transform: rotate(160deg);*/
+}
+/*
+*/
+/* ul tag circle */
+.circle {
+  position: relative;
+  /*border: 1px solid black;*/
+  padding: 0;
+  /*margin: 1em auto;*/
+  /*margin: 1em 1em 0 3em;*/
+	margin-left:8%;
+  width: 100px;
+  height: 50px;
+  border-radius: 100px 100px 0 0;
+  list-style: none;
+  overflow: hidden;
+}
+.circle-list {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  transform-origin: 0% 100%;
+}
+.circle-text {
+  position: absolute;
+  left: -100%;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  transform: skewY(36deg) rotate(18deg);
+  padding-top: 4%;
+  border-radius: 90px 90px 0 0;
+  -moz-border-radius: 90px 90px 0 0;
+  -webkit-border-radius: 90px 90px 0 0;
+    font-size:12px;
+}
+.circle-list:first-child {
+  transform: rotate(270deg) skewY(-36deg);
+}
+.circle-list:nth-child(2) {
+  transform: rotate(306deg) skewY(-36deg);
+}
+.circle-list:nth-child(3) {
+  transform: rotate(342deg) skewY(-36deg);
+}
+.circle-list:nth-child(4) {
+  transform: rotate(18deg) skewY(-36deg);
+}
+.circle-list:nth-child(5) {
+  transform: rotate(54deg) skewY(-36deg);
+}
+li:first-child .circle-text {
+	color:black;
+    background: #cecece;
+}
+li:nth-child(2) .circle-text {
+	color:black;
+    background: #cecece;
+}
+li:nth-child(3) .circle-text {
+	color:black;
+    background: #cecece;
+}
+li:nth-child(4) .circle-text {
+	color:black;
+    background: #cecece;
+}
+li:nth-child(5) .circle-text {
+	color:black;
+    background: #cecece;
+}
+.circle-mask2{
+	position:absolute;
+	bottom:0;
+	left:17%;
+    height:66%;
+    width:66%;
+    text-align:center;
+    margin-top:2em;
+    border-radius: 200px 200px 0 0;
+    -moz-border-radius: 200px 200px 0 0;
+    -webkit-border-radius: 200px 200px 0 0;
+    background:white;
+	z-index:3;
+}
+.circle-mask2-text{
+  padding-top:10px;
+}
+
+.cash{
+  position:relative;
+  width:75%;
+    height: 7%;
+  padding-top:3%;
+  border:1px solid grey;
+  border-radius:15px;
+  text-align:center;
+}
