order_item status change (not completed)

--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -197,19 +197,28 @@
                                                     </button>
                                                 </li>
                                                 <li>
-                                                    <button class="detail_bottom_btn processing">
-                                                        작업진행
-                                                    </button>
+                                                    <form method="POST" action="{% url 'product_order_manage' %}">{% csrf_token %}
+                                                        <input type="hidden" name="is_status_change" value="true"/>
+                                                        <input type="hidden" name="new_status" value="processing"/>
+                                                        <input type="hidden" name="order_item" value="{{ order_item }}"/>
+                                                        <input class="detail_bottom_btn" type="submit" value="작업진행"/>
+                                                    </form>
                                                 </li>
                                                 <li>
-                                                    <button class="detail_bottom_btn finished">
-                                                        작업완료
-                                                    </button>
+                                                    <form method="POST" action="{% url 'product_order_manage' %}">{% csrf_token %}
+                                                        <input type="hidden" name="is_status_change" value="true"/>
+                                                        <input type="hidden" name="new_status" value="finished"/>
+                                                        <input type="hidden" name="order_item" value="{{ order_item }}"/>
+                                                        <input class="detail_bottom_btn" type="submit" value="작업완료"/>
+                                                    </form>
                                                 </li>
                                                 <li>
-                                                    <button class="detail_bottom_btn refunded">
-                                                        작업취소
-                                                    </button>
+                                                    <form method="POST" action="{% url 'product_order_manage' %}">{% csrf_token %}
+                                                        <input type="hidden" name="is_status_change" value="true"/>
+                                                        <input type="hidden" name="new_status" value="refunded"/>
+                                                        <input type="hidden" name="order_item" value="{{ order_item }}"/>
+                                                        <input class="detail_bottom_btn" type="submit" value="작업취소"/>
+                                                    </form>
                                                 </li>
                                             </ul>
                                         </div>
